# nrfproject

./: CMakeLists.txt  prj.conf
src/: button_handler.c  button_handler.h  led_control.c  led_control.h  main.c  mqtt_manage.c  mqtt_manage.h  network.c  network.h  watchdog_management.c  watchdog_management.h
